# citeiv-vrf

game-example/: index.html
game-example/styles/: style.css
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: main.rs
swagger-ui-dist/: citeiv.yml  package.json
viewer/: .gitignore  manage.py
viewer/dbviewer/: apps.py  models.py  urls.py
viewer/dbviewer/migrations/: 0004_outputinfo.py
viewer/dbviewer/static/dbviewer/: style.css
viewer/dbviewer/templates/dbviewer/: detail.html  index.html  template.html
viewer/vrf_viewer/: urls.py  wsgi.py
vrf-game-example/: README.md  index.html
vrf-server/: .gitignore  Cargo.toml  output.db
vrf-server/src/: database.rs  main.rs
vrf_viewer/: db.sqlite3  manage.py
vrf_viewer/dbviewer/: admin.py  models.py  urls.py  views.py
vrf_viewer/dbviewer/migrations/: 0001_initial.py  0002_records_idx.py  0003_auto_20191112_1323.py
vrf_viewer/dbviewer/static/dbviewer/: style.css
vrf_viewer/dbviewer/templates/dbviewer/: detail.html  index.html  template.html
vrf_viewer/vrf_viewer/: settings.py  urls.py
