[package]
name = "vrf-server"
version = "0.1.0"
authors = ["Hyunsik Jeong <rbtree@postech.ac.kr>"]
edition = "2018"

[dependencies]
hex = "0.3.2"
openssl = "0.10"
rand = "0.7"
rocket = "0.4"
sqlite = "0.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vrf = { git = "https://github.com/jhs7jhs/vrf-rs" }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]