[package]
name = "vrf-server"
version = "0.1.0"
authors = ["Hyunsik Jeong <rbtree@postech.ac.kr>"]
edition = "2018"

[dependencies]
rocket = "0.4"
sqlite = "0.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]